.provarCaches/00D410000011HE0EAM/objects/rstk__syetaud__c.object
<CustomObject>
    <description>syetaud__c</description>
    <fields>
        <fullName>rstk__syetaud_custno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_custno</description>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>syetauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_datetime__c</fullName>
        <description>syetaud_datetime__c</description>
        <label>Document Generation Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_doctype__c</fullName>
        <description>syetaud_doctype__c</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Quote</fullName>
                </value>
                <value>
                    <fullName>Sales Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Sales Picklist</fullName>
                </value>
                <value>
                    <fullName>Packing Slip</fullName>
                </value>
                <value>
                    <fullName>Bill of Lading</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>AR Statement</fullName>
                </value>
                <value>
                    <fullName>AR Ad-Hoc Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syetaud_pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_pohdr__c</description>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>syetauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_sobol__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_sobol</description>
        <label>Bill of Lading</label>
        <referenceTo>rstk__sobol__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>syetauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_sohdr__c</description>
        <label>Sales / Quote</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>syetauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_soinv</description>
        <label>Sales Invoice / Memo</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>Email_Template_Document_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_sopack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_sopack__c</description>
        <label>Packing Slip</label>
        <referenceTo>rstk__sopack__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>syetauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_sormh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_sormh__c</description>
        <label>Return Material Authorization</label>
        <referenceTo>rstk__sormh__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>syetauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_templateid__c</fullName>
        <description>syetaud_templateid__c</description>
        <label>Email Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_templname__c</fullName>
        <description>syetaud_templname__c</description>
        <label>Email Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_user__c</description>
        <label>User Generating Document</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>Email_Template_Document_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syetaud_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_vendno</description>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>syetauds</relationshipLabel>
        <relationshipName>syetauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__syetaud_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syetaud_socustcmpno__c</description>
        <inlineHelpText>This field carries the Customer-Company for which the customer driven document was created.</inlineHelpText>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Email Template Document Audits</relationshipLabel>
        <relationshipName>syeyauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Email Template Document Audit</label>
    <listViews>
        <fullName>rstk__All2</fullName>
        <columns>NAME</columns>
        <columns>rstk__syetaud_doctype__c</columns>
        <columns>rstk__syetaud_sobol__c</columns>
        <columns>rstk__syetaud_custno__c</columns>
        <columns>rstk__syetaud_datetime__c</columns>
        <columns>rstk__syetaud_templateid__c</columns>
        <columns>rstk__syetaud_templname__c</columns>
        <columns>rstk__syetaud_sopack__c</columns>
        <columns>rstk__syetaud_pohdr__c</columns>
        <columns>rstk__syetaud_sormh__c</columns>
        <columns>rstk__syetaud_sohdr__c</columns>
        <columns>rstk__syetaud_soinv__c</columns>
        <columns>rstk__syetaud_user__c</columns>
        <columns>rstk__syetaud_vendno__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__My_Email_Template_Document_Audits</fullName>
        <columns>NAME</columns>
        <columns>rstk__syetaud_doctype__c</columns>
        <columns>rstk__syetaud_sobol__c</columns>
        <columns>rstk__syetaud_custno__c</columns>
        <columns>rstk__syetaud_datetime__c</columns>
        <columns>rstk__syetaud_templateid__c</columns>
        <columns>rstk__syetaud_templname__c</columns>
        <columns>rstk__syetaud_sopack__c</columns>
        <columns>rstk__syetaud_pohdr__c</columns>
        <columns>rstk__syetaud_sormh__c</columns>
        <columns>rstk__syetaud_sohdr__c</columns>
        <columns>rstk__syetaud_soinv__c</columns>
        <columns>rstk__syetaud_user__c</columns>
        <columns>rstk__syetaud_vendno__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Email Template Document Audits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Template Document Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>